test_regress/t/t_force_unpacked_unsup.out
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:23:10: Unsupported: Force of unpacked array variable with elements of complex data type
   23 |   string string_array[2];
      |          ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:22:7: Unsupported: Force of unpacked array variable with >= 1000 elements
   22 |   bit big_array[40][40][40];
      |       ^~~~~~~~~
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:21:12: Unsupported: Force of unpacked array variable with >= 1000 elements
   21 |   struct_t s_array[3000];
      |            ^~~~~~~
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:21:12: Unsupported: Force of unpacked array variable with elements of complex data type
   21 |   struct_t s_array[3000];
      |            ^~~~~~~
%Error-UNSUPPORTED: t/t_force_unpacked_unsup.v:24:12: Unsupported: Force of unpacked struct / union variable
   24 |   struct_t my_struct;
      |            ^~~~~~~~~
%Error: Exiting due to
